--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@ body {
     position: absolute;
     bottom: 10px;
     left: 50%;
+   
 }
 .letter{
     border-bottom: 3px solid yellow;
@@ -46,4 +47,23 @@ body {
     display: inline-flex;
     justify-content: center;
     align-items: center;
+}
+#popup-container{
+    background-color: rgba(0, 0, 0, 0.3);
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    display: none;
+    align-items: center;
+    justify-content: center;
+
+}
+.popup{
+    background-color: green;
+    padding: 20px;
+    text-align: center;
+    border-radius: 5px;
+    box-shadow: 0 15px 10px 3px rgba(0, 0, 0, 0.1);
 }
