--- a/style.css
+++ b/style.css
@@ -67,3 +67,15 @@ body {
     border-radius: 5px;
     box-shadow: 0 15px 10px 3px rgba(0, 0, 0, 0.1);
 }
+#message{
+    background-color: rgba(0, 0, 0, 0.3);
+    font-size: 20px;
+    border-radius: 5px;
+    padding: 10px 80px;
+    position: absolute;
+    bottom: -80px;
+    transition: transform 0.2s ease-in-out;
+}
+#message.show{
+    transform: translateY(-80px);
+}
